Including new changes

--- a/about.html
+++ b/about.html
@@ -24,5 +24,12 @@
 <p>This is another paragraph.</p>
 <p>This is another paragraph.</p>
 
+<p>This is another paragraph.</p>
+<p>This is another paragraph.</p>
+<p>This is another paragraph.</p>
+<p>This is another paragraph.</p>
+<p>This is another paragraph.</p>
+<p>This is another paragraph.</p>
+
 </body>
 </html>
