updating about.html

--- a/about.html
+++ b/about.html
@@ -31,5 +31,12 @@
 <p>This is another paragraph.</p>
 <p>This is another paragraph.</p>
 
+<p>Here I have a new funcionality.</p>
+<p>Here I have a new funcionality.</p>
+<p>Here I have a new funcionality.</p>
+<p>Here I have a new funcionality.</p>
+<p>Here I have a new funcionality.</p>
+<p>Here I have a new funcionality.</p>
+
 </body>
 </html>
