--- a/about.html
+++ b/about.html
@@ -38,5 +38,11 @@
 <p>Here I have a new funcionality.</p>
 <p>Here I have a new funcionality.</p>
 
+<h1>My Third Heading</h1>
+
+<p>This is another paragraph.</p>
+<p>This is another paragraph.</p>
+<p>This is another paragraph.</p>
+
 </body>
 </html>
