Including updatings about.html

--- a/about.html
+++ b/about.html
@@ -44,5 +44,12 @@
 <p>This is another paragraph.</p>
 <p>This is another paragraph.</p>
 
+<h1>My Quarta Funcionalidade</h1>
+
+<p>This is another paragraph.</p>
+<p>This is another paragraph.</p>
+<p>This is another paragraph.</p>
+<p>This is another paragraph.</p>
+
 </body>
 </html>
