Updating about.html

--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
 <p>This is another paragraph.</p>
 <p>This is another paragraph.</p>
 
-<h1>My Quarta Funcionalidade</h1>
+<h1>Minha Quarta Funcionalidade</h1>
 
 <p>This is another paragraph.</p>
 <p>This is another paragraph.</p>
