Enviando as alterações

--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>Here I have a huge title</h1>
+    <h2>Here I have a intermediate title</h2>
+    <h3>Here I have a advanced title</h3>
+    <h4>Here I have a basic title</h4>
+
+    <p>
+        And here I have a huge paragraphy....
+    </p>
 </body>
 </html>
